force-app/main/default/objects/bpats__Placement__c/fields/AC_Country_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>AC_Country_Code_Formula__c</fullName>
    <description>Returns the Country Code from the Worksite Location</description>
    <formula>text( bpats__Work_Site_Location__r.Address__CountryCode__s )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code (Formula)</label>
    <type>Text</type>
</CustomField>