force-app/main/default/objects/bpats__Placement__c/fields/AC_Generate_Timesheets__c.field-meta.xml
<CustomField>
    <fullName>AC_Generate_Timesheets__c</fullName>
    <description>If the Job Type on the Job object contains &quot;Temp&quot; or &quot;Contract&quot;, this box will be checked</description>
    <formula>contains(text( bpats__ATS_Job__r.bpats__Type__c) , &quot;Temp&quot;) || contains(text( bpats__ATS_Job__r.bpats__Type__c) , &quot;Contract&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Job Type &quot;Temp&quot; or &quot;Contract&quot;?</inlineHelpText>
    <label>Generate Timesheets</label>
    <type>Checkbox</type>
</CustomField>