force-app/main/default/objects/bpats__Placement__c/fields/AC_Shift__c.field-meta.xml
<CustomField>
    <fullName>AC_Shift__c</fullName>
    <label>Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AC_Shifts</valueSetName>
    </valueSet>
</CustomField>