force-app/main/default/objects/bpats__Placement__c/fields/AC_State_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>AC_State_Code_Formula__c</fullName>
    <description>Returns the State Code from the Work Site Location</description>
    <formula>text( bpats__Work_Site_Location__r.Address__StateCode__s )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Code (Formula)</label>
    <type>Text</type>
</CustomField>