force-app/main/default/objects/bpats__Placement__c/fields/AST_Last_Timesheet_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>AST_Last_Timesheet_Creation_Date__c</fullName>
    <label>Last Timesheet Creation Date</label>
    <type>DateTime</type>
</CustomField>