force-app/main/default/objects/bpats__Placement__c/fields/AST_Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>AST_Pay_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rule</label>
    <referenceTo>ASYMBL_Time__Pay_Rule__c</referenceTo>
    <relationshipLabel>AST  Pay Rule</relationshipLabel>
    <relationshipName>AST_Pay_Rulebpats_Placement</relationshipName>
    <type>Lookup</type>
</CustomField>