force-app/main/default/objects/bpats__Placement__c/fields/AST_Time_Off_Types__c.field-meta.xml
<CustomField>
    <fullName>AST_Time_Off_Types__c</fullName>
    <label>Time-Off Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ASYMBL_Time__Alternative_Timesheet_Types</valueSetName>
    </valueSet>
</CustomField>