force-app/main/default/objects/bpats__Placement__c/fields/AST_Timesheet_Type__c.field-meta.xml
<CustomField>
    <fullName>AST_Timesheet_Type__c</fullName>
    <label>Timesheet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start/End</fullName>
            </value>
            <value>
                <fullName>Time In/Time Out</fullName>
            </value>
            <value>
                <fullName>Total Hours</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>