force-app/main/default/objects/bpats__Placement__c/fields/bpats__Account__c.field-meta.xml
<CustomField>
    <fullName>bpats__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>