force-app/main/default/objects/bpats__Placement__c/fields/bpats__Assignment_Extended__c.field-meta.xml
<CustomField>
    <fullName>bpats__Assignment_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Extended</label>
    <type>Checkbox</type>
</CustomField>