force-app/main/default/objects/bpats__Placement__c/fields/bpats__ATS_Candidate__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements (Candidate)</relationshipLabel>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>