force-app/main/default/objects/bpats__Placement__c/fields/bpats__ATS_Job__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>bpats__Job__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>