force-app/main/default/objects/bpats__Placement__c/fields/bpats__Branch__c.field-meta.xml
<CustomField>
    <fullName>bpats__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>bpats__Branch__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>