force-app/main/default/objects/bpats__Placement__c/fields/bpats__Burden_Amount__c.field-meta.xml
<CustomField>
    <fullName>bpats__Burden_Amount__c</fullName>
    <formula>bpats__Pay_Rate__c * bpats__Burden_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burden Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>