force-app/main/default/objects/bpats__Placement__c/fields/bpats__Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Estimated_End_Date__c</fullName>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>