force-app/main/default/objects/bpats__Placement__c/fields/bpats__Is_Both_Profit_Populated__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Both_Profit_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents whether both the mapped Permanent Profit Amount field and Conversion Profit Amount field is populated</description>
    <label>Is Both Profit Populated</label>
    <type>Checkbox</type>
</CustomField>