force-app/main/default/objects/bpats__Placement__c/fields/bpats__Pay_Rule_State_Code__c.field-meta.xml
<CustomField>
    <fullName>bpats__Pay_Rule_State_Code__c</fullName>
    <label>State Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>