force-app/main/default/objects/bpats__Placement__c/fields/bpats__Placement_Complete__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placement Complete?</label>
    <type>Checkbox</type>
</CustomField>