force-app/main/default/objects/bpats__Placement__c/fields/bpats__Placement_Completed_On__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement_Completed_On__c</fullName>
    <label>Placement Completed On</label>
    <type>DateTime</type>
</CustomField>