force-app/main/default/objects/bpats__Placement__c/fields/bpats__Placement_Credit_Template__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement_Credit_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Credit Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>bpats__Placement_Credit_Template__c.bpats__Type__c</field>
            <operation>equals</operation>
            <value>Update</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>bpats__Placement_Credit_Template__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>