force-app/main/default/objects/bpats__Placement__c/fields/bpats__Placement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement_Percentage__c</fullName>
    <label>Placement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>