force-app/main/default/objects/bpats__Placement__c/fields/bpats__Salary__c.field-meta.xml
<CustomField>
    <fullName>bpats__Salary__c</fullName>
    <label>Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>