force-app/main/default/objects/bpats__Placement__c/fields/bpats__Timesheet_Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>bpats__Timesheet_Delegated_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Delegated Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements (Timesheet Delegated Approver)</relationshipLabel>
    <relationshipName>Placements2</relationshipName>
    <type>Lookup</type>
</CustomField>