force-app/main/default/objects/bpats__Placement__c/fields/bpats__Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>bpats__Total_Billable_Amount__c</fullName>
    <label>Total Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>