force-app/main/default/objects/bpats__Placement__c/fields/bpats__Work_Site_Location__c.field-meta.xml
<CustomField>
    <fullName>bpats__Work_Site_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Site Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.bpats__Account__c</field>
            <operation>equals</operation>
            <valueField>bpats__Work_Site_Location__c.bpats__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>bpats__Work_Site_Location__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>