force-app/main/default/objects/bpats__Placement__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__ATS_Job__c</columns>
    <columns>bpats__ATS_Candidate__c</columns>
    <columns>bpats__Start_Date__c</columns>
    <columns>bpats__Estimated_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>